fix css custom select to overflow-y: scrool and max-width: 300px

--- a/src/shared/components/FormElement/Select.css
+++ b/src/shared/components/FormElement/Select.css
@@ -35,11 +35,13 @@
 }
 
 .dropdown-list {
-  width: 90%;
+  width: 94%;
   font-size: 1rem;
   font-weight: 500;
   background-color: #ffffff;
   position: absolute;
+  max-height: 300px;
+  overflow-y: scroll;
 }
 
 .dropdown-list--item {
